--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "topthink/framework": "5.0.*",
-        "5ini99/think-auth": "^1.0"
+        "topthink/framework": "5.0.21",
+        "qt/qframe-auth": "^1.0"
     },
     "autoload": {
         "psr-4": {
