--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,10 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "topthink/framework": "5.0.21",
-        "qt/qframe-auth": "^1.0"
+        "php": ">=5.6.0",
+        "topthink/framework": "~5.0.21",
+        "qt/qframe-auth": "^1.0",
+        "topthink/think-captcha": "^1.0"
     },
     "autoload": {
         "psr-4": {
