--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "topthink/framework": "~5.0.21",
         "qt/qframe-auth": "^1.0",
         "topthink/think-captcha": "^1.0",
-        "topthink/think-queue": "1.1.6"
+        "topthink/think-queue": "1.1.6",
+        "phpoffice/phpspreadsheet": "^1.6"
     },
     "autoload": {
         "psr-4": {
